- 20150902 v0.0.1     . 修复 StuLib.get_class_info 出错     . 添加 教师信息查询（StuLib.get_teacher_info） 功能     . 将 StuLib.get_url 的 code 修改为对应的方法名称     . 修复 StuLib.change_password 正则匹配不完整的问题     . 修复 StuLib.set_telephone 正则匹配不完整的问题     . 添加部分单元测试     . 调整了包的结构

--- a/.gitignore
+++ b/.gitignore
@@ -153,8 +153,8 @@ coverage.xml
 *,cover
 
 # Translations
-/class_info.html
-/optional_lessons.json
+/hfut_stu_lib/class_info.html
+/func_factory.py
 *.mo
 *.pot
 
