--- a/.travis.yml
+++ b/.travis.yml
@@ -7,3 +7,6 @@ install:
   - "pip install -r requirements.txt"
 # command to run tests
 script: python hfut_stu_lib/test.py
+notifications:
+    webhooks:
+      - https://hook.lesschat.com/travisci/0a425481371c405990a7ffc73ae4b299
