--- a/.travis.yml
+++ b/.travis.yml
@@ -3,10 +3,12 @@ python:
   - "2.7"
 # command to install dependencies
 install:
-#  - "pip install ."
+  - "pip install coveralls"
   - "pip install -r requirements.txt"
 # command to run tests
-script: python hfut_stu_lib/test.py
+script: python -m unittest -v hfut_stu_lib.test
+after_success:
+  - coveralls
 notifications:
     webhooks:
       - https://hook.lesschat.com/travisci/0a425481371c405990a7ffc73ae4b299
