--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,8 @@ install:
   - "pip install coveralls"
   - "pip install -r requirements.txt"
 # command to run tests
-script: python -m unittest -v hfut_stu_lib.test
+script:
+  - coverage run setup.py test
 after_success:
   - coveralls
 notifications:
