- 20151030 v0.3.1     1. 修复接口注册前后的参数差异导致 cal_cache_md5 计算结果不正确的问题     2. 添加了更多的测试用例

--- a/.gitignore
+++ b/.gitignore
@@ -153,10 +153,6 @@ coverage.xml
 *,cover
 
 # Translations
-/hfut_stu_lib/class_info.html
-/request.py
-/lib.py
-/func_factory.py
 *.mo
 *.pot
 
@@ -169,3 +165,6 @@ docs/_build/
 # PyBuilder
 target/
 
+# Custom
+hfut_stu_lib/test.py
+!hfut_stu_lib/test.pyc
