- 20151030 v0.3.2     1. 修改持续集成通知     2. 修复 anydbm 在不同环境下触发的 AttributeError: get

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,3 +13,6 @@ after_success:
 notifications:
     webhooks:
       - https://hook.lesschat.com/travisci/0a425481371c405990a7ffc73ae4b299
+    slack:
+      on_success: never
+      on_failure: never
