--- a/docs/Makefile
+++ b/docs/Makefile
@@ -2,6 +2,7 @@
 #
 
 # You can set these variables from the command line.
+PROJECT       = ../hfut_stu_lib
 SPHINXOPTS    =
 SPHINXBUILD   = sphinx-build
 PAPER         =
@@ -50,6 +51,14 @@ help:
 
 clean:
 	rm -rf $(BUILDDIR)/*
+
+ # ----- 自己添加的编译参数 -----
+autodoc:
+	sphinx-apidoc -o autodoc $(PROJECT)
+
+livehtml:
+    sphinx-autobuild -b html $(ALLSPHINXOPTS) $(BUILDDIR)/html
+# ----- 自己添加的编译参数 -----
 
 html:
 	$(SPHINXBUILD) -b html $(ALLSPHINXOPTS) $(BUILDDIR)/html
