--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,19 @@
 language: python
 python:
+  - "2.6"
   - "2.7"
+  - "3.0"
+  - "3.1"
+  - "3.2"
+  - "3.3"
+  - "3.4"
   - "3.5"
 
 # command to install dependencies
 install:
   - "pip install coveralls"
   - "pip install -r requirements.txt"
+  - "pip install -r dev-requirements.txt"
 # command to run tests
 script:
   - coverage run setup.py test
