--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,1 +1,1 @@
-include README.rst CHANGES.md LICENSE requirements.txt tests
+include README.rst  LICENSE requirements.txt dev-requirements.txt tests/*
