修正 travis.io 配置

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,12 +12,12 @@ install:
   - "pip install -r dev-requirements.txt"
 # command to run tests
 script:
-  - python setup.py test
+  - py.test
 after_success:
   - coveralls
 notifications:
     webhooks:
-      - https://hook.lesschat.com/travisci/0a425481371c405990a7ffc73ae4b299
+      - https://jianliao.com/v2/services/webhook/3e1779ce20f15f1337b107784b043751728ed9e1
     slack:
       on_success: never
       on_failure: never
