--- a/tox.ini
+++ b/tox.ini
@@ -9,6 +9,5 @@ commands = python run_tests.py
 
 ; If you want to make tox run the tests with the same versions, create a
 ; requirements.txt with the pinned versions and uncomment the following lines:
-deps =
--r{toxinidir}/requirements.txt
--r{toxinidir}/dev-requirements.txt
+deps = -r{toxinidir}/requirements.txt
+       -r{toxinidir}/dev-requirements.txt
