--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,6 @@
+# https://zh.wikipedia.org/wiki/YAML
+# https://github.com/travis-ci/travis.rb#table-of-contents
+# https://docs.travis-ci.com/
 language: python
 python: 3.5
 env:
@@ -15,6 +18,8 @@ install:
   - pip install -r requirements.txt
   - pip install -r dev-requirements.txt
 script: tox -e ${TOXENV}
+after_success:
+  - coveralls
 deploy:
   provider: pypi
   distributions: sdist bdist_wheel
@@ -25,3 +30,4 @@ deploy:
     tags: true
     repo: er1iang/hfut-stu-lib
     condition: "$TOXENV == py27"
+
