--- a/tox.ini
+++ b/tox.ini
@@ -4,7 +4,7 @@ envlist = py27, py35
 
 [testenv]
 setenv =
-PYTHONPATH = {toxinidir}:{toxinidir}/hfut-stu-lib
+PYTHONPATH = {toxinidir}:{toxinidir}/hfut
 
 commands = python run_tests.py
 
