--- a/tox.ini
+++ b/tox.ini
@@ -6,9 +6,14 @@ envlist = py27, py35
 setenv =
 PYTHONPATH = {toxinidir}:{toxinidir}/hfut
 
-commands = python run_tests.py
+commands = pytest
 
 ; If you want to make tox run the tests with the same versions, create a
 ; requirements.txt with the pinned versions and uncomment the following lines:
 deps = -r{toxinidir}/requirements.txt
        -r{toxinidir}/dev-requirements.txt
+
+[pytest]
+; http://docs.pytest.org/en/latest/usage.html
+; http://docs.pytest.org/en/latest/customize.html?#basic-test-configuration
+addopts = --cov-config .coveragerc --cov-report term-missing --cov=hfut --doctest-modules tests/
