--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ env:
   - TOXENV=pypy
 before_install:
   - openssl aes-256-cbc -K $encrypted_8816a2954ab9_key -iv $encrypted_8816a2954ab9_iv
-    -in test_accounts.csv.enc -out test_accounts.csv -d
+    -in tests/test_accounts.csv.enc -out tests/test_accounts.csv -d
 install:
   - pip install -U tox
   - pip install -r requirements.txt
