--- a/tox.ini
+++ b/tox.ini
@@ -6,12 +6,13 @@ envlist = py27, py35
 setenv =
 PYTHONPATH = {toxinidir}:{toxinidir}/hfut
 
-commands = pytest
+commands = py.test
 
 ; If you want to make tox run the tests with the same versions, create a
 ; requirements.txt with the pinned versions and uncomment the following lines:
 deps = -r{toxinidir}/requirements.txt
-       -r{toxinidir}/dev-requirements.txt
+       -r{toxinidir}/requirements-dev.txt
+       icalendar
 
 [pytest]
 ; http://docs.pytest.org/en/latest/usage.html
