--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ before_install:
 install:
   - pip install -U tox
   - pip install -r requirements.txt
-  - pip install -r dev-requirements.txt
+  - pip install -r requirements-dev.txt
 script: tox -e ${TOXENV}
 after_success:
   - coveralls
