--- a/tox.ini
+++ b/tox.ini
@@ -3,8 +3,7 @@
 envlist = py27, py35
 
 [testenv]
-setenv =
-PYTHONPATH = {toxinidir}:{toxinidir}/hfut
+setenv = PYTHONPATH = {toxinidir}:{toxinidir}/hfut
 
 commands = py.test
 
