--- a/tox.ini
+++ b/tox.ini
@@ -16,4 +16,4 @@ deps = -r{toxinidir}/requirements.txt
 [pytest]
 ; http://docs.pytest.org/en/latest/usage.html
 ; http://docs.pytest.org/en/latest/customize.html?#basic-test-configuration
-addopts = --cov-config .coveragerc --cov-report term-missing --cov=hfut --doctest-modules tests/
+addopts = -v --cov-config .coveragerc --cov-report term-missing --cov=hfut --doctest-modules tests/
